small changes to homepages styles and fixed broken styles from admin wysiwig for exhibits [ci-skip]

--- a/app/assets/stylesheets/openvault.css.scss
+++ b/app/assets/stylesheets/openvault.css.scss
@@ -287,6 +287,28 @@ input[type=file] {
       }
     }
   }
+  #collections {
+    .collection_block {
+//      border-top: 1px solid #fff;
+      h3 {
+        a {
+         text-decoration: none; 
+         font-size: inherit;
+        }
+      }
+      .user_img {
+        float:left;
+        border: 2px solid #fff;
+        margin-right: 10px;
+      }
+      .user_bio {
+        float:left;
+      }
+      &:first-child {
+        border: none;
+      }
+    }
+  }
   #catalog-scroller {
     margin: 10px 0px;
     border-top: 2px solid $orange;
@@ -305,38 +327,38 @@ input[type=file] {
           padding: 0;
           margin: 0;
           height: 100px;
-          width: 98px;
+          width: 90px;
         }
       }
     }
     .shadow-left {
       display:block;
-      width: 130px;
+      width: 60px;
       height: 100px;
       position: absolute;
       left: 0px;
       top: 0px;
-      background: -moz-linear-gradient(left,  rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%); /* FF3.6+ */
+      background: -moz-linear-gradient(left,  rgba(0,0,0,.2) 0%, rgba(0,0,0,0) 100%); /* FF3.6+ */
       background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(0,0,0,1)), color-stop(100%,rgba(0,0,0,0))); /* Chrome,Safari4+ */
-      background: -webkit-linear-gradient(left,  rgba(0,0,0,1) 0%,rgba(0,0,0,0) 100%); /* Chrome10+,Safari5.1+ */
-      background: -o-linear-gradient(left,  rgba(0,0,0,1) 0%,rgba(0,0,0,0) 100%); /* Opera 11.10+ */
-      background: -ms-linear-gradient(left,  rgba(0,0,0,1) 0%,rgba(0,0,0,0) 100%); /* IE10+ */
-      background: linear-gradient(to right,  rgba(0,0,0,1) 0%,rgba(0,0,0,0) 100%); /* W3C */
+      background: -webkit-linear-gradient(left,  rgba(0,0,0,.2) 0%,rgba(0,0,0,0) 100%); /* Chrome10+,Safari5.1+ */
+      background: -o-linear-gradient(left,  rgba(0,0,0,.2) 0%,rgba(0,0,0,0) 100%); /* Opera 11.10+ */
+      background: -ms-linear-gradient(left,  rgba(0,0,0,.2) 0%,rgba(0,0,0,0) 100%); /* IE10+ */
+      background: linear-gradient(to right,  rgba(0,0,0,.2) 0%,rgba(0,0,0,0) 100%); /* W3C */
       filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#00000000',GradientType=1 ); /* IE6-9 */
     }
     .shadow-right {
       display:block;
-      width: 130px;
+      width: 60px;
       height: 100px;
       position: absolute;
       right: 0px;
       top: 0px;
-      background: -moz-linear-gradient(left,  rgba(0,0,0,0) 0%, rgba(0,0,0,1) 100%); /* FF3.6+ */
+      background: -moz-linear-gradient(left,  rgba(0,0,0,0) 0%, rgba(0,0,0,.2) 100%); /* FF3.6+ */
       background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,1))); /* Chrome,Safari4+ */
-      background: -webkit-linear-gradient(left,  rgba(0,0,0,0) 0%,rgba(0,0,0,1) 100%); /* Chrome10+,Safari5.1+ */
-      background: -o-linear-gradient(left,  rgba(0,0,0,0) 0%,rgba(0,0,0,1) 100%); /* Opera 11.10+ */
-      background: -ms-linear-gradient(left,  rgba(0,0,0,0) 0%,rgba(0,0,0,1) 100%); /* IE10+ */
-      background: linear-gradient(to right,  rgba(0,0,0,0) 0%,rgba(0,0,0,1) 100%); /* W3C */
+      background: -webkit-linear-gradient(left,  rgba(0,0,0,0) 0%,rgba(0,0,0,.2) 100%); /* Chrome10+,Safari5.1+ */
+      background: -o-linear-gradient(left,  rgba(0,0,0,0) 0%,rgba(0,0,0,.2) 100%); /* Opera 11.10+ */
+      background: -ms-linear-gradient(left,  rgba(0,0,0,0) 0%,rgba(0,0,0,.2) 100%); /* IE10+ */
+      background: linear-gradient(to right,  rgba(0,0,0,0) 0%,rgba(0,0,0,.2) 100%); /* W3C */
       filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#000000',GradientType=1 ); /* IE6-9 */
     }
   }
